# BurnRate

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/plans/: 2026-04-03-burnrate-tauri-implementation-plan.md  2026-04-03-burnrate-tauri-technical-solution.md
src/: AGENTS.md  App.css  App.test.tsx  App.tsx  tauriCapabilities.test.ts
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: AGENTS.md  app_state.rs  browser_cookies.rs  commands.rs  lib.rs  models.rs  tray.rs  tray_icon.rs
src-tauri/src/providers/: kimi.rs  minimax.rs  mod.rs  zhipu.rs
src-tauri/src/storage/: db.rs  mod.rs  rollup.rs
src-tauri/tests/: provider_parsing_tests.rs
src/features/dashboard/: summary.test.ts  summary.ts
src/lib/: burnrate.ts
src/store/: useBurnRateStore.ts
