[package]
name = "burn-rate"
version = "0.1.0"
description = "A menubar usage monitor for Zhipu, MiniMax and Kimi"
authors = ["ziyuanweng"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.100"
futures = "0.3.31"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-opener = "2"
tauri-plugin-positioner = { version = "2.3.1", features = ["tray-icon"] }
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "local-offset", "macros", "parsing"] }
tokio = { version = "1.51.0", features = ["time"] }
